--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }, 
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mugema123/Back-end.git"
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/Mugema123/Back-end#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.29"
+    "mongoose": "^5.9.29",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
