--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.29",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
